<resources>
    <string name="app_name">JobsityChallenge</string>

    <string name="activity_main__title">Jobsity - TV Maze</string>
    <string name="activity_person_search__title">Search for Person</string>

    <string name="no_internet">No Internet. Try again later.</string>
    <string name="item_shows__summary"><![CDATA[<p><b>Under the Dome</b> is the story of a small town that is suddenly and inexplicably sealed off from the rest of the world by an enormous transparent dome. The town\'s inhabitants must deal with surviving the post-apocalyptic conditions while searching for answers about the dome, where it came from and if and when it will go away.</p>]]></string>

    <string name="search_error">It happened an error while searching the show. Try again later.</string>
    <string name="search_title">Search by Shows</string>
    <string name="person_search_title">Search by Person</string>

    <string name="search_hint">Type the name of the Show</string>
    <string name="person_search_hint">Type the name of the Person</string>

    <string name="favorites_title">Favorite Series</string>
    <string name="restore_title">Restore Original List</string>

    <string name="item_episodes__season">Season: %1$s</string>
    <string name="item_episodes__number">Number: %1$s</string>
    <string name="item_episodes__name">Name: %1$s</string>

    <string name="activity_show_details__episodes">Episodes:</string>
    <string name="activity_show_details__summary">Summary:</string>
    <string name="activity_show_details__gender">Gender:</string>
    <string name="activity_show_details__schedule">Schedule:</string>

    <string name="activity_show_episode__name">Name:</string>
    <string name="activity_show_episode__number">Number:</string>
    <string name="activity_show_episode__season">Season:</string>
    <string name="activity_show_episode__summary">Summary:</string>

    <string name="activity_show_details__empty_field">&lt;&lt; Empty field &gt;&gt;</string>

    <string name="error_searching_shows">Error searching shows.</string>

    <string name="activity_fingerprint__touch_fingerprint">Touch the Fingerprint Sensor</string>
    <string name="activity_fingerprint__lock_screen_not_enabled">Lock screen security not enabled.</string>
    <string name="activity_fingerprint__fingerprint_permission_not_enabled">Permission not enabled (Fingerprint).</string>
    <string name="activity_fingerprint__no_fingerprint_registered">No fingerprint registered, please register.</string>
    <string name="activity_fingerprint__device_does_not_support_fingerprint">This device does not support fingerprint.\nPlease authenticate with PIN.</string>

    <string name="activity_pin__confirm">Confirm</string>
    <string name="activity_pin__insert_password">Type your PIN</string>
    <string name="activity_pin__one">1</string>
    <string name="activity_pin__two">2</string>
    <string name="activity_pin__three">3</string>
    <string name="activity_pin__four">4</string>
    <string name="activity_pin__five">5</string>
    <string name="activity_pin__six">6</string>
    <string name="activity_pin__seven">7</string>
    <string name="activity_pin__eight">8</string>
    <string name="activity_pin__nine">9</string>
    <string name="activity_pin__zero">0</string>
    <string name="activity_pin__invalid_password_length">PIN must have between 4 and 6 characters.</string>

    <string name="activity_login__fingerprint">Fingerprint Login</string>
    <string name="activity_login__pin">PIN Login</string>
    <string name="activity_main__empty_recycler_view">There are no Favorite Series.</string>
    <string name="activity_login__default">Default Login</string>

    <string name="activity_person_search__empty_recycler_view">There are no People selected.</string>
    <string name="item_person__lack_of_time">Unfortunately, I didn\'t got time to implement this feature:\n- After clicking on a Person, the application should show the Details of that Person.</string>

    <string name="activity_person_details__series">Series:</string>
</resources>