<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorites"
        android:title="@string/favorites_title"
        android:icon="@drawable/ic_favorite_black"
        app:showAsAction="never" />

    <item
        android:id="@+id/update"
        android:title="@string/restore_title"
        android:icon="@drawable/ic_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/people_search"
        android:title="@string/person_search_title"
        android:icon="@drawable/ic_people"
        app:showAsAction="never" />
</menu>