<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <!--=============== HEADER ===============-->

    <LinearLayout
        android:id="@+id/activity_show_episode__container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/activity_show_episode__image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_image_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_transparent_30" />
        </FrameLayout>

        <!--=============== MIDDLE ===============-->

        <!-- Number -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/activity_show_episode__number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_show_episode__number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="2" />
        </LinearLayout>

        <!-- Season -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/activity_show_episode__season"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_show_episode__season_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="1" />
        </LinearLayout>

        <!--=============== BOTTOM ===============-->

        <!-- Summary -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/activity_show_episode__summary"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            style="@style/RecyclerView_ScrollbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/activity_show_episode__summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/grey_800"
                android:textSize="18sp"
                tools:text="@string/item_shows__summary" />
        </ScrollView>
    </LinearLayout>

    <include
        android:id="@+id/activity_show_episode__loading"
        layout="@layout/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />
</LinearLayout>

